@@ -650,8 +650,8 @@ reread:
       Dmsg1(90, "Read device got: ERR=%s\n", strerror(errno));
       clrerror_dev(dev, -1);
       block->read_len = 0;
-      Mmsg2(&dev->errmsg, _("Read error on device %s. ERR=%s.\n"), 
-	 dev->dev_name, strerror(dev->dev_errno));
+      Mmsg4(&dev->errmsg, _("Read error at file:block %d:%d on device %s. ERR=%s.\n"), 
+	 dev->file, dev->block_num, dev->dev_name, strerror(dev->dev_errno));
       Jmsg(jcr, M_ERROR, 0, "%s", dev->errmsg);
       if (dev->state & ST_EOF) {  /* EOF just seen? */
 	 dev->state |= ST_EOT;	  /* yes, error => EOT */
